--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+
       - name: Install dependencies
         run: npm install
 
@@ -29,3 +34,6 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Test Rust code
+        run: cargo test
