--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cpal = { version = "0.15", features = ["host-trait", "stream-trait", "device-trait"] } # For audio output
+cpal = "0.15"
 eframe = "0.20" # For GUI framework
 egui = "0.20" # For GUI components
+serde = { version = "1.0", features = ["derive"] } # For serialization
+serde_json = "1.0" # For JSON handling
+hound = "3.4.0"
