--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "electron:serve": "electron .",
+    "electron:build": "electron-builder"
   },
   "author": "Ghost Protocol (Pvt) Ltd.",
   "license": "MIT",
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "prop-types": "^15.8.1",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "webpack": "^5.0.0",
@@ -25,6 +29,8 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "jest": "^29.0.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "electron": "^25.0.0",
+    "electron-builder": "^23.0.0"
   }
 }
