--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 cpal = "0.15"
-eframe = "0.20" # For GUI framework
-egui = "0.20" # For GUI components
+eframe = "0.22" # For GUI framework
+egui = "0.22" # For GUI components
 serde = { version = "1.0", features = ["derive"] } # For serialization
 serde_json = "1.0" # For JSON handling
 hound = "3.4.0"
+rfd = "0.12" # For file dialogs
