--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0", features = ["derive"] } # For serialization
 serde_json = "1.0" # For JSON handling
 hound = "3.4.0"
 rfd = "0.12" # For file dialogs
+plotters = "0.3" # Added for spectrogram rendering
+rustfft = "6.0"  # Added for FFT calculations
