--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,10 @@ edition = "2021"
 
 [dependencies]
 cpal = "0.15"
-eframe = "0.22" # For GUI framework
-egui = "0.22" # For GUI components
-serde = { version = "1.0", features = ["derive"] } # For serialization
-serde_json = "1.0" # For JSON handling
+eframe = "0.22"
+egui = "0.22"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 hound = "3.4.0"
-rfd = "0.12" # For file dialogs
-plotters = "0.3" # Added for spectrogram rendering
-rustfft = "6.0"  # Added for FFT calculations
+plotters = "0.3"
+rustfft = "6.0"
