--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,12 @@ serde_json = "1.0"
 hound = "3.4.0"
 plotters = "0.3"
 rustfft = "6.0"
+gtk = "0.18"
+glib = "0.18"
+tokio = { version = "1", features = ["full"] }
+rayon = "1.7" # Add Rayon for parallelism
+crossbeam = "0.8" # Add Crossbeam for thread-safe communication
+crossbeam-channel = "0.5" # Add crossbeam-channel for thread-safe communication
 
 [package.metadata.bundle]
 name = "Wave Crafter"
