--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,22 @@ jobs:
             libgdk-pixbuf2.0-dev \
             libgtk-3-dev # Install all required system dependencies
 
+      - name: Cache Cargo registry
+        uses: actions/cache@v3
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-registry-
+
+      - name: Cache Cargo build
+        uses: actions/cache@v3
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-build-
+
       - name: Set up Rust
         uses: actions-rs/toolchain@v1 # Set up the Rust toolchain
         with:
@@ -38,3 +54,6 @@ jobs:
 
       - name: Run tests
         run: cargo test # Run the test suite to verify functionality and correctness
+
+      - name: Run integration tests
+        run: cargo test --test integration_test.rs # Correct test file name
